# ogen/oas_schemas_gen.go
@@ -279,3 +279,134 @@ func (o OptString) Or(d string) string {
 	}
 	return d
 }
+
+type ViewGetBadRequest struct {
+	Error OptString `json:"error"`
+}
+
+// GetError returns the value of Error.
+func (s *ViewGetBadRequest) GetError() OptString {
+	return s.Error
+}
+
+// SetError sets the value of Error.
+func (s *ViewGetBadRequest) SetError(val OptString) {
+	s.Error = val
+}
+
+func (*ViewGetBadRequest) viewGetRes() {}
+
+// ViewGetInternalServerError is response for ViewGet operation.
+type ViewGetInternalServerError struct{}
+
+func (*ViewGetInternalServerError) viewGetRes() {}
+
+type ViewGetOK struct {
+	Result ViewGetOKResult `json:"result"`
+}
+
+// GetResult returns the value of Result.
+func (s *ViewGetOK) GetResult() ViewGetOKResult {
+	return s.Result
+}
+
+// SetResult sets the value of Result.
+func (s *ViewGetOK) SetResult(val ViewGetOKResult) {
+	s.Result = val
+}
+
+func (*ViewGetOK) viewGetRes() {}
+
+type ViewGetOKResult struct {
+	Position ViewGetOKResultPosition `json:"position"`
+	// Presigned URL for target position.
+	URL string `json:"url"`
+}
+
+// GetPosition returns the value of Position.
+func (s *ViewGetOKResult) GetPosition() ViewGetOKResultPosition {
+	return s.Position
+}
+
+// GetURL returns the value of URL.
+func (s *ViewGetOKResult) GetURL() string {
+	return s.URL
+}
+
+// SetPosition sets the value of Position.
+func (s *ViewGetOKResult) SetPosition(val ViewGetOKResultPosition) {
+	s.Position = val
+}
+
+// SetURL sets the value of URL.
+func (s *ViewGetOKResult) SetURL(val string) {
+	s.URL = val
+}
+
+type ViewGetOKResultPosition struct {
+	// Target of x position.
+	X float64 `json:"x"`
+	// Target of y position.
+	Y float64 `json:"y"`
+}
+
+// GetX returns the value of X.
+func (s *ViewGetOKResultPosition) GetX() float64 {
+	return s.X
+}
+
+// GetY returns the value of Y.
+func (s *ViewGetOKResultPosition) GetY() float64 {
+	return s.Y
+}
+
+// SetX sets the value of X.
+func (s *ViewGetOKResultPosition) SetX(val float64) {
+	s.X = val
+}
+
+// SetY sets the value of Y.
+func (s *ViewGetOKResultPosition) SetY(val float64) {
+	s.Y = val
+}
+
+type ViewGetReq struct {
+	Position ViewGetReqPosition `json:"position"`
+}
+
+// GetPosition returns the value of Position.
+func (s *ViewGetReq) GetPosition() ViewGetReqPosition {
+	return s.Position
+}
+
+// SetPosition sets the value of Position.
+func (s *ViewGetReq) SetPosition(val ViewGetReqPosition) {
+	s.Position = val
+}
+
+type ViewGetReqPosition struct {
+	// Target of x position.
+	X float64 `json:"x"`
+	// Target of y position.
+	Y float64 `json:"y"`
+}
+
+// GetX returns the value of X.
+func (s *ViewGetReqPosition) GetX() float64 {
+	return s.X
+}
+
+// GetY returns the value of Y.
+func (s *ViewGetReqPosition) GetY() float64 {
+	return s.Y
+}
+
+// SetX sets the value of X.
+func (s *ViewGetReqPosition) SetX(val float64) {
+	s.X = val
+}
+
+// SetY sets the value of Y.
+func (s *ViewGetReqPosition) SetY(val float64) {
+	s.Y = val
+}
