# openAPI/openapi.oas3.yml
@@ -11,8 +11,6 @@ paths:
         post:
             summary: Generate AI Drawing
             description: Post id in storage to BE.
-            tags:
-                - to BE
             requestBody:
                 required: true
                 content:
@@ -63,8 +61,6 @@ paths:
         get:
             summary: Get presigned urls
             description: Retrieve presigned URLs for both Human and AI drawings.
-            tags:
-                - from BE
             responses:
                 "200":
                     description: Presigned URLs for drawings retrieved successfully.
@@ -133,7 +129,99 @@ paths:
                                     error:
                                         type: string
                                         description: "A detailed error message."
-
+    /view:
+        get:
+            summary: Drawing Viewer Page
+            description: Viewer Page for human AI drawings.
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                position:
+                                    type: object
+                                    properties:
+                                        x:
+                                            type: number
+                                            description: target of x position
+                                            example: 0
+                                        y:
+                                            type: number
+                                            description: target of y position
+                                            example: 0
+                                    required:
+                                        - x
+                                        - y
+                            required:
+                                - position
+            responses:
+                "200":
+                    description: Drawings were successfully fetched.
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    result:
+                                        type: object
+                                        properties:
+                                            position:
+                                                type: object
+                                                properties:
+                                                    x:
+                                                        type: number
+                                                        description: target of x position
+                                                        example: 0
+                                                    y:
+                                                        type: number
+                                                        description: target of y position
+                                                        example: 0
+                                                required:
+                                                    - x
+                                                    - y
+                                            url:
+                                                type: string
+                                                description: "Presigned URL for target position."
+                                        required:
+                                            - position
+                                            - url
+                                required:
+                                    - result
+                            example:
+                                {
+                                    result:
+                                        {
+                                            position: {
+                                                x: 0,
+                                                y: 0,
+                                            },
+                                            url :  "https://storage.googleapis.com/...",
+                                        },
+                                }
+                "400":
+                    description: Bad Request
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: string
+                                        example: "Invalid input data"
+                "500":
+                    description: Internal Server Error - the server encountered an unexpected condition that prevented it from fulfilling the request.
+                default:
+                    description: Unexpected error
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: string
+                                        description: "A detailed error message."
 components:
     securitySchemes:
         ApiKeyAuth:
